testdata/baselines/reference/submodule/conformance/assignmentCompatWithEnumIndexer.errors.txt
assignmentCompatWithEnumIndexer.ts(5,5): error TS2741: Property '"0"' is missing in type '{}' but required in type 'Record<E.A, any>'.


==== assignmentCompatWithEnumIndexer.ts (1 errors) ====
    enum E {
        A
    }
    
    let foo: Record<E, any> = {}
        ~~~
!!! error TS2741: Property '"0"' is missing in type '{}' but required in type 'Record<E.A, any>'.
    